# TuringAgent

./: .env  CLAUDE.md  EDW_INTEGRATION_README.md  README.md  main.py  pyproject.toml  start_server.py  test.html  test_attribute_review.py  test_branch_validation.py  test_code_review.py  test_contextual_prompt.py  test_contextual_prompt_utf8.py  test_edw_integration.py  test_node_refactoring.py
config/: edw_attribute_knowledge.yaml  edw_config.yaml  prompts.yaml  simple_config.yaml
src/agent/: code_enhance_agent.py  edw_agents.py  mix_agent.py
src/basic/: config.py
src/basic/confluence/: confluence_operate.py  confluence_tools.py
src/basic/filesystem/: file_operate.py
src/basic/github/: README.md  __init__.py  github_tool.py
src/basic/jira/: __init__.py  jira_operate.py  jira_tools.py
src/basic/metis/: email.py
src/cache/: __init__.py  table_cache.py
src/config/: __init__.py  config_manager.py
src/graph/: REFACTORING_GUIDE.md  attribute_review_nodes.py  contextual_prompt.py  edw_graph.py  edw_graph_v2.py  message_summarizer.py  review_nodes.py  validation_nodes.py
src/graph/nodes/: __init__.py
src/graph/tools/: __init__.py  adb_tools.py  base.py  confluence_tools.py  email_tools.py  jira_tools.py  naming_tools.py  wrappers.py
src/graph/utils/: __init__.py  code.py  enhancement.py  field.py  message.py  naming.py  progress.py  session.py  socket_utils.py  tool_monitor.py
src/mcp/: __init__.py  mcp_client.py
src/models/: __init__.py  edw_models.py  states.py  validation_state.py
src/server/: app.py  edw_service.py  socket_manager.py
(+21 files in other folders)
