[project]
name = "turingagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "dotenv>=0.9.9",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "pydantic>=2.11.7",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
]



